--- a/premium.html
+++ b/premium.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Vitoria Benetto - Conteúdo Premium</title>
-    <link rel="icon" type="image/jpeg" href="fiveicon.jpeg">
-    <link rel="shortcut icon" type="image/jpeg" href="fiveicon.jpeg">
+    <link rel="icon" type="image/jpeg" href="fiveicon.jpg">
+    <link rel="shortcut icon" type="image/jpeg" href="fiveicon.jpg">
     <style>
         * { margin: 0; padding: 0; box-sizing: border-box; }
+
         body {
             font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Helvetica Neue', Arial, sans-serif;
             background-color: #ffffff;
@@ -15,65 +16,99 @@
             line-height: 1.4;
             min-height: 100vh;
         }
+
         .container { display: flex; min-height: 100vh; }
+
         .sidebar {
-            width: 280px; background: #ffffff; border-right: 1px solid #e1e8ed;
-            padding: 20px 0; position: fixed; height: 100vh; overflow-y: auto; display: none;
+            width: 280px;
+            background: #ffffff;
+            border-right: 1px solid #e1e8ed;
+            padding: 20px 0;
+            position: fixed;
+            height: 100vh;
+            overflow-y: auto;
+            display: none;
         }
+
         .sidebar-item {
-            display: flex; align-items: center; padding: 12px 24px;
-            text-decoration: none; color: #657786; transition: all 0.2s;
+            display: flex;
+            align-items: center;
+            padding: 12px 24px;
+            text-decoration: none;
+            color: #657786;
+            transition: all 0.2s;
         }
         .sidebar-item:hover { background: #f7f9fa; color: #000000; }
         .sidebar-icon { width: 24px; height: 24px; margin-right: 16px; font-size: 20px; }
-        .main-content { width: 100%; background: #ffffff; margin-left: 0; }
-        .profile-header {
-            position: relative; height: 200px;
-            background: url(capa.jpeg) center/cover no-repeat;
+
+        .main-content { 
+            width: 100%;
+            background: #ffffff;
+            margin-left: 0;
         }
-        .header-overlay { position: absolute; top: 0; left: 0; right: 0; bottom: 0; background: rgba(0, 0, 0, 0.4); }
+
+        .profile-header {
+            position: relative;
+            height: 200px;
+            background: url('capa.jpg') center/cover no-repeat;
+        }
+        .header-overlay {
+            position: absolute; top: 0; left: 0; right: 0; bottom: 0;
+            background: rgba(0, 0, 0, 0.4);
+        }
+
         .header-nav {
             position: absolute; top: 16px; left: 16px; right: 16px;
-            display: flex; justify-content: space-between; align-items: center; color: white;
+            display: flex; justify-content: space-between; align-items: center;
+            color: white;
         }
-        .back-arrow { font-size: 20px; cursor: pointer; }
-        .header-icons { display: flex; gap: 16px; }
-        .header-icon { font-size: 20px; cursor: pointer; }
+
         .profile-overlay-info {
             position: absolute; bottom: 16px; left: 16px; right: 16px; color: white;
         }
         .overlay-title { font-size: 18px; font-weight: 700; margin-bottom: 4px; text-shadow: 0 1px 3px rgba(0, 0, 0, 0.8); }
         .overlay-stats { font-size: 14px; opacity: 0.95; text-shadow: 0 1px 2px rgba(0, 0, 0, 0.8); }
+
         .welcome-message {
             background: linear-gradient(135deg, #2F91EA, #00d4aa);
-            color: white; padding: 16px; text-align: center; font-weight: 600; font-size: 16px;
+            color: white;
+            padding: 16px;
+            text-align: center;
+            font-weight: 600;
+            font-size: 16px;
         }
+
         .profile-section { padding: 16px; position: relative; background: #ffffff; }
         .profile-main { display: flex; gap: 16px; margin-bottom: 24px; }
         .profile-avatar {
             width: 70px; height: 70px; border-radius: 50%; border: 3px solid #ffffff;
-            margin-top: -35px; background: url(perfil.jpeg) center/cover no-repeat; position: relative;
+            margin-top: -35px; background: url('perfil.jpg') center/cover no-repeat;
+            position: relative;
         }
+
         .online-indicator {
-            position: absolute; bottom: 2px; right: 2px; width: 14px; height: 14px;
-            background: #00d4aa; border: 2px solid #ffffff; border-radius: 50%;
+            position: absolute; bottom: 2px; right: 2px;
+            width: 14px; height: 14px; background: #00d4aa;
+            border: 2px solid #ffffff; border-radius: 50%;
         }
+
         .profile-details { flex: 1; margin-top: 10px; }
         .profile-name { font-size: 20px; font-weight: 700; margin-bottom: 4px; color: #000000; }
         .profile-username { color: #657786; margin-bottom: 4px; font-size: 14px; }
         .profile-status { color: #00d4aa; font-size: 12px; margin-bottom: 12px; }
         .profile-bio { margin-bottom: 12px; line-height: 1.5; color: #000000; font-size: 14px; }
+
         .exclusive-content {
-            background: #f7f9fa; border-radius: 8px; padding: 16px; margin-bottom: 24px; border: 1px solid #e1e8ed;
+            background: #f7f9fa;
+            border-radius: 8px;
+            padding: 16px;
+            margin-bottom: 24px;
+            border: 1px solid #e1e8ed;
         }
-        .exclusive-title {
-            font-size: 18px; font-weight: 700; color: #2F91EA;
-            margin-bottom: 12px; text-align: center;
-        }
+        .exclusive-title { font-size: 18px; font-weight: 700; color: #2F91EA; margin-bottom: 12px; text-align: center; }
         .exclusive-text { font-size: 14px; line-height: 1.6; color: #000000; text-align: center; }
-        .content-tabs {
-            display: flex; border-bottom: 1px solid #e1e8ed; margin-bottom: 16px;
-        }
+
+        .content-tabs { display: flex; border-bottom: 1px solid #e1e8ed; margin-bottom: 16px; }
         .tab {
             flex: 1; text-align: center; padding: 12px 8px;
             border-bottom: 2px solid transparent; cursor: pointer;
@@ -82,58 +117,80 @@
         .tab.active { color: #2F91EA; border-bottom-color: #2F91EA; }
         .tab-count { display: block; font-size: 16px; font-weight: 700; margin-bottom: 2px; }
         .tab-label { font-size: 10px; text-transform: uppercase; letter-spacing: 0.5px; }
+
         .content-grid {
             display: grid; grid-template-columns: repeat(2, 1fr);
-            gap: 8px; padding: 0 16px 16px 16px; background: #ffffff;
+            gap: 8px; padding: 0 16px 16px 16px;
+            background: #ffffff;
         }
         .content-item {
             aspect-ratio: 1; background: #ffffff; border-radius: 8px;
             position: relative; overflow: hidden; cursor: pointer;
-            transition: transform 0.2s; border: 2px solid #2F91EA;
+            transition: transform 0.2s;
+            border: 2px solid #2F91EA;
         }
         .content-item:hover { transform: scale(1.02); }
         .content-image, .content-video { width: 100%; height: 100%; object-fit: cover; }
+
         .premium-badge {
             position: absolute; top: 8px; right: 8px;
             background: linear-gradient(135deg, #2F91EA, #00d4aa);
             color: white; border-radius: 12px;
             padding: 4px 8px; font-size: 10px; font-weight: 600;
         }
+
         .play-button {
-            position: absolute; top: 50%; left: 50%; transform: translate(-50%, -50%);
-            background: rgba(47, 145, 234, 0.9); color: white; border: none;
-            border-radius: 50%; width: 48px; height: 48px; font-size: 20px; cursor: pointer;
-            transition: all 0.2s;
+            position: absolute;
+            top: 50%;
+            left: 50%;
+            transform: translate(-50%, -50%);
+            background: rgba(47, 145, 234, 0.9);
+            color: white;
+            border: none;
+            border-radius: 50%;
+            width: 48px;
+            height: 48px;
+            font-size: 20px;
+            cursor: pointer;
         }
-        .play-button:hover { background: #2F91EA; transform: translate(-50%, -50%) scale(1.1); }
+
         .chat-button {
-            position: fixed; bottom: 20px; right: 20px;
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
             background: linear-gradient(135deg, #2F91EA, #00d4aa);
-            color: white; border: none; border-radius: 50px; padding: 12px 20px;
-            font-size: 14px; font-weight: 600; cursor: pointer;
-            box-shadow: 0 4px 12px rgba(47, 145, 234, 0.3); transition: all 0.2s;
+            color: white;
+            border: none;
+            border-radius: 50px;
+            padding: 12px 20px;
+            font-size: 14px;
+            font-weight: 600;
+            cursor: pointer;
+            box-shadow: 0 4px 12px rgba(47, 145, 234, 0.3);
         }
-        .chat-button:hover { transform: translateY(-2px); box-shadow: 0 6px 16px rgba(47, 145, 234, 0.4); }
+
         .pagination-controls {
-            display: flex; align-items: center; justify-content: center; gap: 16px; margin: 16px 0;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 16px;
+            margin: 16px 0;
         }
         .pagination-btn {
-            background: #2F91EA; color: white; border: none; padding: 8px 16px;
-            border-radius: 20px; font-size: 14px; cursor: pointer; transition: all 0.2s;
+            background: #2F91EA;
+            color: white;
+            border: none;
+            padding: 8px 16px;
+            border-radius: 20px;
+            font-size: 14px;
+            cursor: pointer;
         }
-        .pagination-btn:hover { background: #1e6bb8; transform: translateY(-1px); }
-        .pagination-btn:disabled {
-            background: #e1e8ed; color: #657786; cursor: not-allowed; transform: none;
-        }
-        .page-info { font-size: 14px; color: #657786; font-weight: 500; }
+
         @media (min-width: 768px) {
             .sidebar { display: block; }
             .main-content { margin-left: 280px; max-width: 600px; }
             .content-grid { grid-template-columns: repeat(3, 1fr); gap: 12px; }
             .profile-header { height: 250px; }
-        }
-        @media (min-width: 1200px) {
-            .content-grid { grid-template-columns: repeat(3, 1fr); }
         }
     </style>
 </head>
@@ -156,28 +213,25 @@
                 <div class="header-overlay"></div>
                 <div class="header-nav">
                     <div class="back-arrow">←</div>
-                    <div class="header-icons">
-                        <div class="header-icon">⚙️</div>
-                        <div class="header-icon">⋯</div>
-                    </div>
                 </div>
                 <div class="profile-overlay-info">
-                    <div class="overlay-title">Jena Wolfy 🏆 RATED #1 ON OF...</div>
-                    <div class="overlay-stats">1.1K Publicações • 78.5K Curtir</div>
+                    <div class="overlay-title">Vitoria Benetto 🏆</div>
+                    <div class="overlay-stats">Publicações Exclusivas</div>
                 </div>
             </div>
 
             <div class="profile-section">
                 <div class="profile-main">
-                    <div class="profile-avatar"><div class="online-indicator"></div></div>
+                    <div class="profile-avatar">
+                        <div class="online-indicator"></div>
+                    </div>
                     <div class="profile-details">
                         <h1 class="profile-name">Vitoria Benetto</h1>
                         <div class="profile-username">@vleticia01</div>
                         <div class="profile-status">Online agora • Assinante Premium</div>
                         <div class="profile-bio">
-                            ***🏆RAINHA DO ANAL🏆*** Welcome to Heaven on Earth ✨<br>
-                            **XXX NO MEU FEED DO ONLYFANS!**<br>
-                            <strong>🔥 VOCÊ AGORA TEM ACESSO TOTAL AO CONTEÚDO EXCLUSIVO! 🔥</strong>
+                            Bem-vindo(a) ao meu espaço exclusivo 💎<br>
+                            Aqui você tem acesso completo ao meu conteúdo Premium 🔥
                         </div>
                     </div>
                 </div>
@@ -185,20 +239,19 @@
                 <div class="exclusive-content">
                     <div class="exclusive-title">🔓 CONTEÚDO PREMIUM DESBLOQUEADO</div>
                     <div class="exclusive-text">
-                        Agora você tem acesso completo a todos os meus conteúdos exclusivos!<br>
                         Clique nas imagens e vídeos abaixo para visualizar em alta qualidade.<br>
                         💬 Não esqueça de me mandar uma mensagem privada!
                     </div>
                 </div>
 
                 <div class="content-tabs">
-                    <div class="tab active"><span class="tab-count">86</span><span class="tab-label">FOTOS</span></div>
-                    <div class="tab"><span class="tab-count">39</span><span class="tab-label">VÍDEOS</span></div>
+                    <div class="tab active"><span class="tab-label">FOTOS</span></div>
+                    <div class="tab"><span class="tab-label">VÍDEOS</span></div>
                 </div>
 
-                <div class="pagination-controls" style="text-align: center; margin-bottom: 16px;">
+                <div class="pagination-controls">
                     <button id="prevBtn" class="pagination-btn">← Anterior</button>
-                    <span id="pageInfo" class="page-info">Página 1 de 5</span>
+                    <span id="pageInfo" class="page-info">Página 1</span>
                     <button id="nextBtn" class="pagination-btn">Próxima →</button>
                 </div>
 
@@ -211,10 +264,10 @@
     <button class="chat-button" onclick="openChat()">💬 Enviar Mensagem Privada</button>
 
     <script>
-        const PHOTOS_TOTAL = 85;
-        const VIDEOS_TOTAL = 39;
-        const ITEMS_PER_PAGE = 20;
-        
+        const PHOTOS_TOTAL = 50;  // 👉 altere para o total de fotos
+        const VIDEOS_TOTAL = 20;  // 👉 altere para o total de vídeos
+        const ITEMS_PER_PAGE = 12;
+
         let currentPage = 1;
         let currentTab = 'photos';
 
@@ -224,9 +277,11 @@
 
         function openImageModal(imageSrc) {
             const modal = document.createElement('div');
-            modal.style.cssText = `position: fixed; top: 0; left: 0; width: 100%; height: 100%;
-                                   background: rgba(0,0,0,0.9); display: flex; align-items: center;
-                                   justify-content: center; z-index: 10000; cursor: pointer;`;
+            modal.style.cssText = `
+                position: fixed; top: 0; left: 0; width: 100%; height: 100%;
+                background: rgba(0,0,0,0.9); display: flex; align-items: center; justify-content: center;
+                z-index: 10000; cursor: pointer;
+            `;
             const img = document.createElement('img');
             img.src = imageSrc;
             img.style.cssText = `max-width: 90%; max-height: 90%; object-fit: contain;`;
@@ -237,15 +292,15 @@
 
         function loadPhotos(page = 1) {
             const grid = document.getElementById('photos-grid');
+            grid.innerHTML = '';
             const startIndex = (page - 1) * ITEMS_PER_PAGE + 1;
             const endIndex = Math.min(startIndex + ITEMS_PER_PAGE - 1, PHOTOS_TOTAL);
-            grid.innerHTML = '';
+
             for (let i = startIndex; i <= endIndex; i++) {
                 const item = document.createElement('div');
                 item.className = 'content-item';
                 item.innerHTML = `
-                    <img src="foto${i}.png" alt="Foto ${i}" class="content-image"
-                         onerror="this.onerror=null; this.src='foto${i}.jpg';">
+                    <img src="fotos/foto${i}.jpg" alt="Foto ${i}" class="content-image">
                     <div class="premium-badge">FOTO</div>
                 `;
                 item.addEventListener('click', function() {
@@ -259,27 +314,23 @@
 
         function loadVideos(page = 1) {
             const grid = document.getElementById('videos-grid');
+            grid.innerHTML = '';
             const startIndex = (page - 1) * ITEMS_PER_PAGE + 1;
             const endIndex = Math.min(startIndex + ITEMS_PER_PAGE - 1, VIDEOS_TOTAL);
-            grid.innerHTML = '';
+
             for (let i = startIndex; i <= endIndex; i++) {
                 const item = document.createElement('div');
                 item.className = 'content-item';
                 item.innerHTML = `
-                    <img src="video${i}.jpeg" alt="Vídeo ${i}" class="content-video"
-                         onerror="this.onerror=null; this.src='video${i}.jpg';">
+                    <img src="videos/video${i}.jpg" alt="Vídeo ${i}" class="content-video">
                     <button class="play-button">▶</button>
                     <div class="premium-badge">HD</div>
                 `;
                 const playBtn = item.querySelector('.play-button');
                 playBtn.addEventListener('click', function(e) {
                     e.stopPropagation();
-                    const videoUrl = `video${i}.mp4`;
+                    const videoUrl = `videos/video${i}.mp4`;
                     window.open(videoUrl, '_blank');
-                });
-                item.addEventListener('click', function() {
-                    const img = this.querySelector('img');
-                    openImageModal(img.src);
                 });
                 grid.appendChild(item);
             }
@@ -295,4 +346,39 @@
         }
 
         function changePage(direction) {
-            const total = currentTab === 'photos' ? PHOTOS_TOTAL : VIDE
+            const total = currentTab === 'photos' ? PHOTOS_TOTAL : VIDEOS_TOTAL;
+            const totalPages = Math.ceil(total / ITEMS_PER_PAGE);
+            if (direction === 'next' && currentPage < totalPages) currentPage++;
+            else if (direction === 'prev' && currentPage > 1) currentPage--;
+            if (currentTab === 'photos') loadPhotos(currentPage);
+            else loadVideos(currentPage);
+        }
+
+        document.getElementById('prevBtn').addEventListener('click', () => changePage('prev'));
+        document.getElementById('nextBtn').addEventListener('click', () => changePage('next'));
+
+        document.querySelectorAll('.tab').forEach((tab, index) => {
+            tab.addEventListener('click', function() {
+                document.querySelectorAll('.tab').forEach(t => t.classList.remove('active'));
+                this.classList.add('active');
+                currentPage = 1;
+                if (index === 0) {
+                    currentTab = 'photos';
+                    document.getElementById('photos-grid').style.display = 'grid';
+                    document.getElementById('videos-grid').style.display = 'none';
+                    loadPhotos(1);
+                } else {
+                    currentTab = 'videos';
+                    document.getElementById('photos-grid').style.display = 'none';
+                    document.getElementById('videos-grid').style.display = 'grid';
+                    loadVideos(1);
+                }
+            });
+        });
+
+        document.addEventListener('DOMContentLoaded', function() {
+            loadPhotos(1);
+        });
+    </script>
+</body>
+</html>
